name:                buckwheatjs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rexim/buckwheatjs
license:             MIT
license-file:        LICENSE
author:              Alexey Kutepov a.k.a. rexim
maintainer:          reximkut@gmail.com
copyright:           2017 Alexey Kutepov a.k.a. rexim
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Buckwheat
                     , Entity
                     , Record
                     , Snapshot
                     , Command
  build-depends:       base >= 4.7 && < 5
                     , text
  default-language:    Haskell2010

executable buckwheatjs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , buckwheatjs
  default-language:    Haskell2010

test-suite buckwheatjs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , buckwheatjs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rexim/buckwheatjs
